--- a/hikerz/public/css/app.css
+++ b/hikerz/public/css/app.css
@@ -14,6 +14,7 @@ body {
 
 ul{
     display: flex;
+    flex-direction: column;
     gap: 2rem;
     list-style: none;
     margin-left: auto;align-items: center;
